@@ -1,5 +1,7 @@
 *SVN*
 
+* Assume html format when rendering partials in RJS. #8076 [Rick]
+
 * Don't double-escape url_for in views.  #8144 [Rich Collins, Josh Peek]
 
 * Allow JSON-style values for the :with option of observe_field.  Closes #8557 [kommen]
